fix: login alignment (#28)

--- a/src/LoginPage/loginPage.css
+++ b/src/LoginPage/loginPage.css
@@ -14,7 +14,7 @@ body {
 
 .login_bg {
     background: #FFFFFF;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -51,7 +51,7 @@ body {
     transform: translateX(-50%);
     left: 50%;
     padding: 40px;
-    top: 58%;
+    top: 54%;
     transform: translate(-50%, -50%);
     background: #D9D9D9;
     mix-blend-mode: hard-light;
@@ -69,9 +69,8 @@ body {
     font-size: 50px;
     line-height: 74px;
     color: #000000;
-    margin-bottom: 50px;
     text-align: center;
-    top: -50px;
+    top: -45px;
     left: 50%;
     transform: translateX(-50%);
 }
